# hiring-assistant

./: .env.example  main.py  pyproject.toml
scripts/: generate_key.py
src/: __init__.py  app.py
src/chatbot/: __init__.py  conversation_manager.py  conversation_manager.py.py  prompts_manager.py
src/database/: __init__.py  database_manager.py
src/security/: __init__.py  encryption_handler.py
src/utils/: __init__.py  data_validator.py  openai_client.py  validators.py
